--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <footer class="footer fadein">
       <div class="persistent">
         <strong>Links:</strong>
-        <a href="http://raybo.org/negotiating">Slides</a> |
-        <a href="http://github.com/planetoftheweb/negotiating/slides/negotiating.md">Notes</a> |
+        <a href="http://bit.ly/negotiate4devs">http://bit.ly/negotiate4devs</a> |
+        <a href="https://github.com/planetoftheweb/negotiating/blob/master/slides/negotiating.md">Notes</a> |
         <strong>Contact:</strong>
         <a href="https://www.linkedin.com/in/planetoftheweb">LinkedIn</a>,
         <a href="http://twitter.com/planetoftheweb">@planetoftheweb</a>,
